--- a/paijiu/manifest.plist
+++ b/paijiu/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://103.104.106.89/file/jingdianpaijiu-20180621.ipa</string>
+					<string>http://103.104.106.89/file/jingdianpaijiu.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
